changes to the image

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pasta Salade</h1>
-    <img src="images/pasta.png" alt="Pasta Image" height="310" width="310">
+    <img src="odin-recipes/images/pasta.png" alt="Pasta Image" height="310" width="310">
     <h2>Pasta Salade with Chicken</h2>
     <p>this recipe is bla bla bla bla blablablablablabal</p>
     <p>this recipe is blablablablabalbalbalbalablablabla</p>
