changes to the image

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="/images/pizza.png" alt="Pizza Image" width="310" height="310">
+    <img src="../images/pizza.png" alt="Pizza Image" width="310" height="310">
     <h2>Pizza</h2>
     <p>this recipe is bla bla bla bla blablablablablabal</p>
     <p>this recipe is blablablablabalbalbalbalablablabla</p>
