--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.png" alt="lasagna">
+    <img src="../images/lasagna.png" alt="lasagna" width="310" height="310">
     <h2>Lasagna</h2>
     <p>this recipe is bla bla bla bla blablablablablabal</p>
     <p>this recipe is blablablablabalbalbalbalablablabla</p>
